// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check icon 1`] = `
<i
  className="fa fa-check"
/>
`;

exports[`check icon and changing base 1`] = `
<i
  className="fas fa-check"
/>
`;

exports[`check icon and changing setEl 1`] = `
<div
  className="fa fa-check"
/>
`;
